Fixed NPL Education
Fixed it boss

--- a/NPL Education/html/book2.html
+++ b/NPL Education/html/book2.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book</title>
-    <link rel="stylesheet" href="./style2.css">
-    <script src="./main2.js" defer></script>
+    <title>Diet & Nutrition Book</title>
+    <link rel="stylesheet" href="../css/style2.css">
+    <script src="../js/main2.js" defer></script>
     <script src="https://kit.fontawesome.com/08417d1dbb.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -23,12 +23,12 @@
         <div id="p1" class="paper">
             <div class="front">
                 <div id="f1" class="front-content">
-                    <img class="coverimg" src="img/11.png">
+                    <img class="coverimg" src="../img/11.png">
                 </div>
             </div>
             <div class="back">
                 <div id="b1" class="back-content">
-                    <img class="coverimg" src="img/15.png">
+                    <img class="coverimg" src="../img/15.png">
                 </div>
             </div>
         </div>
@@ -36,12 +36,12 @@
         <div id="p2" class="paper">
             <div class="front">
                 <div id="f2" class="front-content">
-                    <img class="coverimg" src="img/16.png">
+                    <img class="coverimg" src="../img/16.png">
                 </div>
             </div>
             <div class="back">
                 <div id="b2" class="back-content">
-                    <img class="coverimg" src="img/17.png">
+                    <img class="coverimg" src="../img/17.png">
                 </div>
             </div>
         </div>
@@ -49,12 +49,12 @@
         <div id="p3" class="paper">
             <div class="front">
                 <div id="f3" class="front-content">
-                    <img class="coverimg" src="img/18.png">
+                    <img class="coverimg" src="../img/18.png">
                 </div>
             </div>
             <div class="back">
                 <div id="b3" class="back-content">
-                    <img class="coverimg" src="img/19.png">
+                    <img class="coverimg" src="../img/19.png">
                 </div>
             </div>
         </div>
@@ -62,12 +62,12 @@
          <div id="p4" class="paper">
             <div class="front">
                 <div id="f4" class="front-content">
-                    <img class="coverimg" src="img/20.png">
+                    <img class="coverimg" src="../img/20.png">
                 </div>
             </div>
             <div class="back">
                 <div id="b4" class="back-content">
-                    <img class="coverimg" src="img/21.png">
+                    <img class="coverimg" src="../img/21.png">
                 </div>
             </div>
         </div>
@@ -75,12 +75,12 @@
         <div id="p5" class="paper">
             <div class="front">
                 <div id="f5" class="front-content">
-                    <img class="coverimg" src="img/22.png">
+                    <img class="coverimg" src="../img/22.png">
                 </div>
             </div>
             <div class="back">
                 <div id="b5" class="back-content">
-                    <img class="coverimg" src="img/12.png">
+                    <img class="coverimg" src="../img/12.png">
                 </div>
             </div>
         </div>
