--- a/NPL Education/html/contentpage.html
+++ b/NPL Education/html/contentpage.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="content.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="../css/content.css">
+    <title>Content Page</title>
 </head>
 <h1 class="headingtext">COURSE CONTENT</h1>
 <body>
     <div class="section1">
     <div class="imgcontainer"> 
-        <img class="hyperbook" src="img/coverhyper.png">  
+        <img class="hyperbook" src="../img/coverhyper.png">  
     </div>
         <button class="openbook1" onclick="window.location.href = ('book.html');"> Open Book</button>
         <button onclick="window.location.href = ('quiz1.html');" class="quiz1">Quiz 1</button>
@@ -20,7 +20,7 @@
 
     <div class="section2">
         <div class="imgcontainer2"> 
-            <img class="dietbook" src="img/dietbook.png">  
+            <img class="dietbook" src="../img/dietbook.png">  
         </div>
             <button class="openbook2" onclick="window.location.href = ('book2.html');"> Open Book</button>
             <button class="quiz2">Quiz 1</button>
@@ -29,7 +29,7 @@
 
     <div class="section3">
         <div class="imgcontainer3"> 
-            <img class="suppbook" src="img/suppbook.png">  
+            <img class="suppbook" src="../img/suppbook.png">  
         </div>
             <button class="openbook3">Open Book</button>
             <button class="quiz3">Quiz 1</button>
@@ -38,7 +38,7 @@
 
     <div class="section4">
         <div class="imgcontainer4"> 
-            <img class="formbook" src="img/formbook.png">  
+            <img class="formbook" src="../img/formbook.png">  
         </div>
             <button class="openbook4">Open Book</button>
             <button class="quiz4">Quiz 1</button>
