--- a/NPL Education/html/quiz1.html
+++ b/NPL Education/html/quiz1.html
@@ -8,21 +8,21 @@
     <script src="https://unpkg.com/jquery"></script>
     <link href="https://unpkg.com/survey-jquery@1.9.45/modern.css" type="text/css" rel="stylesheet" />
     <script src="https://unpkg.com/survey-jquery@1.9.45/survey.jquery.min.js"></script>
-    <link rel="stylesheet" href="quizstyle.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="../css/quizstyle.css">
+    <title>First Quiz</title>
 </head>
 
 <body>
 
     <div id="surveyContainer"></div>
-    <img class="quiz1" id="img1" src="img/quizresult1.png">
-    <img class="quiz1" id="img2" src="img/quizresult2.png">
-    <img class="quiz1" id="img3" src="img/quizresult3.png">
-    <img class="quiz1" id="img4" src="img/quizresult4.png">
-    <img class="quiz1" id="img5" src="img/quizresult5.png">
-    <img class="quiz1" id="img6" src="img/quizresult6.png">
-    <img class="quiz1" id="img7" src="img/quizresult7.png">
-    <img class="quiz1" id="img8" src="img/quizresult8.png">
+    <img class="quiz1" id="img1" src="../img/quizresult1.png">
+    <img class="quiz1" id="img2" src="../img/quizresult2.png">
+    <img class="quiz1" id="img3" src="../img/quizresult3.png">
+    <img class="quiz1" id="img4" src="../img/quizresult4.png">
+    <img class="quiz1" id="img5" src="../img/quizresult5.png">
+    <img class="quiz1" id="img6" src="../img/quizresult6.png">
+    <img class="quiz1" id="img7" src="../img/quizresult7.png">
+    <img class="quiz1" id="img8" src="../img/quizresult8.png">
 
     <button onclick="window.location.href = ('contentpage.html');" class="a">Go Back</button>
     
