--- a/NPL Education/html/survey.html
+++ b/NPL Education/html/survey.html
@@ -7,15 +7,15 @@
     <script src="https://unpkg.com/jquery"></script>
     <link href="https://unpkg.com/survey-jquery@1.9.43/modern.css" type="text/css" rel="stylesheet"/>
     <script src="https://unpkg.com/survey-jquery@1.9.43/survey.jquery.min.js"></script>
-    <link rel="stylesheet" href="surveystyle.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="../css/surveystyle.css">
+    <title>Survey</title>
 </head>
 <body>
     <div id="surveyContainer"></div>
-    <img class="img1" id="imgg" src="img/Suppliment.png">
-    <img class="img2" id="imgg2" src="img/nutrition.jpg">
-    <img class="img3" id="imgg3" src="img/hyper.jpg">
-    <img class="img4" id="imgg4" src="img/exercise.jpg">
+    <img class="img1" id="imgg" src="../img/Suppliment.png">
+    <img class="img2" id="imgg2" src="../img/nutrition.jpg">
+    <img class="img3" id="imgg3" src="../img/hyper.jpg">
+    <img class="img4" id="imgg4" src="../img/exercise.jpg">
 
     <div>
         <a class="a" href="education.html">Go Back</a>
