--- a/NPL Education/html/book.html
+++ b/NPL Education/html/book.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Book</title>
-    <link rel="stylesheet" href="./style.css">
-    <script src="./main.js" defer></script>
+    <title>Hypertrophy Book</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <script src="../js/main.js" defer></script>
     <script src="https://kit.fontawesome.com/08417d1dbb.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -23,12 +23,12 @@
         <div id="p1" class="paper">
             <div class="front">
                 <div id="f1" class="front-content">
-                    <img class="coverimg" src="img/coverhyper.png">
+                    <img class="coverimg" src="../img/coverhyper.png">
                 </div>
             </div>
             <div class="back">
                 <div id="b1" class="back-content">
-                    <img class="coverimg" src="img/hypercontent1.png">
+                    <img class="coverimg" src="../img/hypercontent1.png">
                 </div>
             </div>
         </div>
@@ -36,12 +36,12 @@
         <div id="p2" class="paper">
             <div class="front">
                 <div id="f2" class="front-content">
-                    <img class="coverimg" src="img/hypercontent2.png">
+                    <img class="coverimg" src="../img/hypercontent2.png">
                 </div>
             </div>
             <div class="back">
                 <div id="b2" class="back-content">
-                    <img class="coverimg" src="img/hypercontent3.png">
+                    <img class="coverimg" src="../img/hypercontent3.png">
                 </div>
             </div>
         </div>
@@ -49,12 +49,12 @@
         <div id="p3" class="paper">
             <div class="front">
                 <div id="f3" class="front-content">
-                    <img class="coverimg" src="img/hypercontent4.png">
+                    <img class="coverimg" src="../img/hypercontent4.png">
                 </div>
             </div>
             <div class="back">
                 <div id="b3" class="back-content">
-                    <img class="coverimg" src="img/hypercontent5.png">
+                    <img class="coverimg" src="../img/hypercontent5.png">
                 </div>
             </div>
         </div>
@@ -62,12 +62,12 @@
          <div id="p4" class="paper">
             <div class="front">
                 <div id="f4" class="front-content">
-                    <img class="coverimg" src="img/hypercontent6.png">
+                    <img class="coverimg" src="../img/hypercontent6.png">
                 </div>
             </div>
             <div class="back">
                 <div id="b4" class="back-content">
-                    <img class="coverimg" src="img/hypercontent7.png">
+                    <img class="coverimg" src="../img/hypercontent7.png">
                 </div>
             </div>
         </div>
@@ -75,12 +75,12 @@
         <div id="p5" class="paper">
             <div class="front">
                 <div id="f5" class="front-content">
-                    <img class="coverimg" src="img/hypercontent8.png">
+                    <img class="coverimg" src="../img/hypercontent8.png">
                 </div>
             </div>
             <div class="back">
                 <div id="b5" class="back-content">
-                    <img class="coverimg" src="img/hypercontent9Final.png">
+                    <img class="coverimg" src="../img/hypercontent9Final.png">
                 </div>
             </div>
         </div>
